src/ingress/nginx-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-cpeh
---
apiVersion: v1
kind: Namespace
metadata:
  name: iceberg
---
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-kafka
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "app.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-items-app
            port:
              number: 8000
  - host: "locust.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust-master
            port:
              number: 8089
---
# Kafka namespace Ingress update
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: strimzi-kafka
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "kafdrop.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafdrop
            port:
              number: 9000
  - host: "kafka-connect.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-connect
            port:
              number: 8083
---
# Update Ceph namespace Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-ingress
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "ceph.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-rgw-my-store-external
            port:
              number: 80
---
# Update Iceberg namespace Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iceberg-ingress
  namespace: iceberg
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "iceberg-rest-catalog.${EXTERNAL_IP}.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iceberg-rest-catalog
            port:
              number: 8181
